AC_INIT([xrn],[10.00-beta-3])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LEX
AC_PROG_AWK
AC_PROG_YACC
AC_TYPE_SIGNAL
if test $ac_cv_type_signal != void; then
   AC_DEFINE(SIGFUNC_RETURNS)
fi

PKG_CHECK_MODULES([XRN], [xaw7])
AC_DEFINE(XRN_LANG_english)
AC_DEFINE(CONFIG_H_IS_OK)
AC_DEFINE(XRN_APP_CLASS,"XRn")
AC_DEFINE(XRN)

AC_OUTPUT(Makefile)
