AC_INIT([xrn],[10.11])
AM_INIT_AUTOMAKE([foreign])
AC_USE_SYSTEM_EXTENSIONS
AC_C_CONST
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LEX([yywrap])
AC_PROG_AWK
AC_PROG_YACC
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int *)
AX_CHECK_COMPILE_FLAG(-Wno-unused-result,CFLAGS="$CFLAGS -Wno-unused-result",)
AX_CHECK_POSIX_REGCOMP
AC_CHECK_FUNCS([mkstemp strtok])
AC_CHECK_HEADERS([unistd.h])

PKG_CHECK_MODULES([XRN], [xaw7])
AC_DEFINE(XRN_LANG_english)
AC_DEFINE(CONFIG_H_IS_OK)
AC_DEFINE(XRN_APP_CLASS,"XRn")
AC_DEFINE(XRN)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
